receving Item Page

--- a/Pages/ViewReceivingReport.cshtml
+++ b/Pages/ViewReceivingReport.cshtml
@@ -21,7 +21,7 @@
             <li class="breadcrumb-item d-flex align-items-center">
                 <img src="images/inventory.png" alt="Home" width="16" height="16" class="me-2" />
                         
-                <a href="/Requests" class="text-decoration-none">@Model.lblRequests</a>
+                <a href="/ReceivingItems" class="text-decoration-none">@Model.lblReceivingItems</a>
             </li>
             <li class="breadcrumb-item d-flex align-items-center">
                 <img src="images/inventory.png" alt="Home" width="16" height="16" class="me-2" />
