--- a/Pages/ManageRooms.cshtml
+++ b/Pages/ManageRooms.cshtml
@@ -209,7 +209,7 @@
                     <thead class="thead-light">
                         <tr>
                             <th scope="col" class="border-0 rounded-start">@Model.lblStoreName</th>
-                            @* <th scope="col" class="border-0">@Model.lblRoomName</th> *@
+                            <th scope="col" class="border-0">@Model.lblRoomName</th>
                             <th scope="col" class="border-0">@Model.lblBuildingNumber</th>
                             <th scope="col" class="border-0">@Model.lblRoomNumber</th>
                             <th scope="col" class="border-0">@Model.lblRoomDesc</th>
@@ -232,7 +232,7 @@
                                 
                                 <tr>
                                     <td>@item.StoreName</td>
-                                    @* <td>@item.RoomName</td> *@
+                                    <td>@item.RoomName</td>
                                     <td>@item.BuildingNumber</td>
                                     <td>@item.RoomNo</td>
                                     <td>@item.RoomDesc</td>
