--- a/Pages/ManageStore.cshtml
+++ b/Pages/ManageStore.cshtml
@@ -129,7 +129,7 @@
         <div class="btn-toolbar mb-2 mb-md-0">
 
             
-            @if (Model.CanManageUsers && Model.CanManageStore)
+            @if (Model.CanAddStore && Model.CanManageStore)
         {
             <div class="btn-group ms-2 ms-lg-3">
                 <a href="AddStore" class="btn btn-gray-800 d-flex justify-content-center d-inline-flex align-items-center">
