--- a/Pages/Requests.cshtml
+++ b/Pages/Requests.cshtml
@@ -311,6 +311,18 @@
                                             {
                                                 <span class="bg-success p-2 rounded text-white">Accepted</span>
                                             }
+                                            else if(inbox.Type == "Add Order" && inbox.ReportType == "ReturnItems")
+                                            {   
+                                                <form method="post" asp-page-handler="AddOrder">
+                                                    <input type="hidden" value="@inbox.ReturnRequestId" name="ReportId" />
+                                                    <input type="hidden" value="@inbox.Id" id="InboxId" name="InboxId" />
+                                                    <input type="hidden" value="@inbox.ReportType" id="ReportType" name="ReportType" />
+                                                    <button class="btn btn-info btn-sm p-1" type="submit">
+                                                      Add Order To Item Card
+                                                    </button>
+                                                </form>
+                                                
+                                            }
                                             else if(inbox.Type == "File Attached")
                                             {
                                                 <span class="bg-success p-2 rounded text-white">File Attached</span>
@@ -629,7 +641,7 @@
                                         </div>
                                     </div>
                                     <div class="modal-footer">
-                                        <button type="submit"  class="btn btn-info"   >Accept</button>
+                                        <button type="submit"  class="btn btn-info">Accept</button>
                                        
                                     </div>
                                 </form>
