--- a/Pages/ManageItemCards.cshtml
+++ b/Pages/ManageItemCards.cshtml
@@ -38,8 +38,8 @@
             });
 
             let ws = XLSX.utils.aoa_to_sheet(ws_data);
-            XLSX.utils.book_append_sheet(wb, ws, "Manage Items Data");
-            XLSX.writeFile(wb, "ManageItems.xlsx");
+            XLSX.utils.book_append_sheet(wb, ws, "Manage Items Card Data");
+            XLSX.writeFile(wb, "ManageItemCards.xlsx");
         });
     </script>
 
