--- a/Pages/Rep_UserReport.cshtml
+++ b/Pages/Rep_UserReport.cshtml
@@ -83,8 +83,8 @@
                 class="btn btn-outline-gray-600 d-inline-flex  align-items-center report mx-2">@Model.lblItems</a>
             <a href="Rep_ItemCards"
                 class="btn btn-outline-gray-600 d-inline-flex  align-items-center report mx-2">@Model.lblItemCards</a>
-            <a href="Rep_ItemMovement"
-                class="btn btn-outline-gray-600 d-inline-flex  align-items-center report mx-2">@Model.lblItemMovement</a>
+            @* <a href="Rep_ItemMovement"
+                class="btn btn-outline-gray-600 d-inline-flex  align-items-center report mx-2">@Model.lblItemMovement</a> *@
             @if (Model.CanManageUsers)
             {
                 <a href="Rep_UserActivity"
