--- a/Pages/Rep_Item.cshtml
+++ b/Pages/Rep_Item.cshtml
@@ -91,8 +91,8 @@
             <a href="Rep_Item" class="btn btn-gray-600 d-inline-flex  align-items-center report mx-2">@Model.lblItems</a>
             <a href="Rep_ItemCards"
                 class="btn btn-outline-gray-600 d-inline-flex  align-items-center report mx-2">@Model.lblItemCards</a>
-            <a href="Rep_ItemMovement"
-                class="btn btn-outline-gray-600 d-inline-flex  align-items-center report mx-2">@Model.lblItemMovement</a>
+            @* <a href="Rep_ItemMovement"
+                class="btn btn-outline-gray-600 d-inline-flex  align-items-center report mx-2">@Model.lblItemMovement</a> *@
             @if (Model.CanManageUsers)
             {
                 <a href="Rep_UserActivity"
@@ -343,8 +343,6 @@
                             {
                             <th scope="col" class="border-0">@Model.lblExpiryDate</th>
                             }
-
-                            <th class="border-0 rounded-end"></th>
                         </tr>
                     </thead>
                     <tbody>
