--- a/Pages/Alerts/Index.cshtml
+++ b/Pages/Alerts/Index.cshtml
@@ -102,9 +102,9 @@
                                 @Html.DisplayFor(modelItem => item.Store.StoreId)
                             </td>
                             <td>
-                                <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
-                                <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
-                                <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
+                                @* <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> | *@
+                                @* <a asp-page="./Details" asp-route-id="@item.Id">Details</a> | *@
+                                @* <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a> *@
                             </td>
                         </tr>
                     }
@@ -191,9 +191,9 @@
                                     @Html.DisplayFor(modelItem => item.Store.StoreId)
                             </td>
                             <td>
-                                <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
-                                <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
-                                <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
+                                @* <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> | *@
+                                @* <a asp-page="./Details" asp-route-id="@item.Id">Details</a> | *@
+                                @* <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a> *@
                             </td>
                         </tr>
                     }
@@ -280,9 +280,9 @@
                                     @Html.DisplayFor(modelItem => item.Store.StoreId)
                             </td>
                             <td>
-                                <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
-                                <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
-                                <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
+                                @* <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> | *@
+                                @* <a asp-page="./Details" class="btn btn-primary" asp-route-id="@item.Id">Details</a> | *@
+                                @* <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a> *@
                             </td>
                         </tr>
                     }
